# MiniNIR

./: .gitignore  README.md
Niru/firmware/: platformio.ini
Niru/firmware/src/: main.cpp
python/: ADS1263.py  MiniNirAdc.py  WriteCsv.py  WriteCsvSql.py  requirements.txt  rp2040Serial.py  splitDadosSQL.py
python/dados/: README.md
sarspec/: CMakeLists.txt  README.md  data_Hg.csv  pyqtSarspecBin.py  spec-res.cpp
